--- a/PVF/PVF.csproj
+++ b/PVF/PVF.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BarraHerramientaa">
+      <HintPath>..\..\..\..\..\..\Downloads\BarraHerramientaa\BarraHerramientaa\bin\Debug\BarraHerramientaa.dll</HintPath>
+    </Reference>
     <Reference Include="Bunifu_UI_v1.5.3">
       <HintPath>C:\Users\SpartanLuck 117\source\repos\SIGEPV\SIGEPV\lib\Bunifu_UI_v1.5.3.dll</HintPath>
     </Reference>
@@ -70,6 +73,12 @@
     <Compile Include="SubMenusItems.Designer.cs">
       <DependentUpon>SubMenusItems.cs</DependentUpon>
     </Compile>
+    <Compile Include="AltaUsuarios.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AltaUsuarios.Designer.cs">
+      <DependentUpon>AltaUsuarios.cs</DependentUpon>
+    </Compile>
     <Compile Include="Usuario.cs" />
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
@@ -91,6 +100,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Welcome.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Welcome.Designer.cs">
+      <DependentUpon>Welcome.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AltaProductos.resx">
       <DependentUpon>AltaProductos.cs</DependentUpon>
     </EmbeddedResource>
@@ -119,6 +134,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="AltaUsuarios.resx">
+      <DependentUpon>AltaUsuarios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Welcome.resx">
+      <DependentUpon>Welcome.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
